datatype file has been written

--- a/variables_and_datatypes/index.html
+++ b/variables_and_datatypes/index.html
@@ -2,6 +2,6 @@
 <html>
     <title>Variables</title>
     <body>
-        <script src="Variables.js"/>
+        <script src="DataTypes.js"/>
     </body>
 </html>
