loops and loops tasks file have been written

--- a/loops/index.html
+++ b/loops/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <title>Variables</title>
-    <body>
-        <script src="Loops.js"/>
-    </body>
+<title>Variables</title>
+
+<body>
+    <script src="LoopTasks.js"></script>
+</body>
+
 </html>
